# shacl-ui-widget-scoring

./: .coverage  .gitignore  CLAUDE.md  README.md  Taskfile.yml  example.md  example.py  main.py  pyproject.toml  spec.md
.github/workflows/: deploy.yml
playground/: .gitignore  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js
playground/public/: examples.json
playground/scripts/: extract_examples.py
playground/src/: App.vue  style.css
playground/src/components/editors/: EditorPanel.vue  FocusNodeModal.vue  InputFields.vue  MonacoEditor.vue  TurtleEditor.vue
playground/src/components/layout/: ExampleSelector.vue  Footer.vue  Header.vue  SaveModal.vue  Sidebar.vue  SplitPane.vue  ToastContainer.vue  Toolbar.vue
playground/src/components/results/: DefaultWidget.vue  ResultsPanel.vue  ScoreList.vue  StepVisualization.vue
playground/src/components/ui/sonner/: Sonner.vue
playground/src/composables/: useExamples.ts  useMonaco.ts  usePyodide.ts  useSaves.ts  useToast.ts
playground/src/lib/: focusNode.ts
playground/src/stores/: playground.ts  scoring.ts
playground/src/types/: examples.ts  focusNode.ts  saves.ts  scoring.ts
playground/src/workers/: pyodide.worker.ts
playground/tests/: console.spec.ts
shui_widget_scoring/: __init__.py  core.py  exceptions.py  models.py  namespaces.py  validation.py
tests/: __init__.py  conftest.py  test_core.py  test_edge_cases.py  test_example_md.py  test_models.py  test_spec.py  test_validation.py
