[project]
name = "shui-widget-score"
version = "0.1.0"
description = "SHACL UI Widget Scoring algorithm implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyshacl>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=shui_widget_scoring --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["shui_widget_scoring"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
